# aoc_2023

./: .gitignore
aoc_1/: aoc_1_1.py  small_input.txt
aoc_10/: aoc_10_1.py  aoc_10_2.py
aoc_11/: 11_1_distances.txt  aoc_11_1.py  aoc_11_2.py
aoc_12/: aoc_12_1.py  aoc_12_2.py
aoc_13/: aoc_13_1.py  aoc_13_2.py  small_input4.txt
aoc_14/: aoc_14_2.py  notepad.txt  small_input2.txt
aoc_15/: aoc_15_1.py  aoc_15_2.py
aoc_16/: aoc_16_1.py  aoc_16_2.py  small_input3.txt
aoc_17/: aoc_17_1.py  sm4_solution.txt
aoc_18/: aoc_18_1.py  small_input2.txt
aoc_2/: aoc_2_1.py  aoc_2_2.py
aoc_2023/aoc_10/: aoc_10_2.py
aoc_2023/aoc_13/: aoc_13_1.py  aoc_13_2.py  small_input2.txt
aoc_2023/aoc_14/: aoc_14_1.py
aoc_2023/aoc_17/: aoc_17_2.py  small_input2.txt  small_input3.txt
aoc_2023/aoc_18/: aoc_18_2.py
aoc_2023/aoc_19/: aoc_19_1.py
aoc_2023/aoc_2/: aoc_2_1.py  aoc_2_2.py
aoc_2023/aoc_24/: aoc_24_1.py  aoc_24_2.py
aoc_2023/aoc_3/: aoc_3_1.py  aoc_3_2.py
aoc_2023/aoc_4/: aoc_4_2.py
aoc_2023/aoc_5/: aoc_5_2.py
aoc_2023/aoc_7/: aoc_7_1.py
aoc_2023/aoc_8/: aoc_8_1.py  aoc_8_2.py
aoc_2023/aoc_9/: aoc_9_1.py
aoc_2025/: .env.example  README.md  pyproject.toml  work_context.md
aoc_2025/aoc_1/: solution.py  solution_2.py
aoc_2025/util/: get_data.py  process_input.py
aoc_3/: aoc_3_1.py  aoc_3_2.py
aoc_4/: aoc_4_1.py  aoc_4_2.py
aoc_5/: aoc_5_1.py  aoc_5_2.py
aoc_6/: aoc_6_1.py  aoc_6_2.py
aoc_7/: aoc_7_2.py
aoc_8/: aoc_8_1.py  aoc_8_2.py
aoc_9/: aoc_9_1.py  aoc_9_2.py
util/: process_input.py
